fix: Prevent gallery overflowing onto menu (#1945)
- Closes #1937

--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -68,6 +68,8 @@ advanced-camera-card-loading {
 div.main {
   position: relative;
 
+  overflow: auto;
+
   width: 100%;
   height: 100%;
   margin: auto;
